--- a/src/pages/Registration/Registration.css
+++ b/src/pages/Registration/Registration.css
@@ -4,8 +4,7 @@
     box-sizing: border-box;
 }
 
-.section-registration
-{
+.section-registration {
     width: 100%;
     /* height: 100vh; */
     background-color: #000;
@@ -16,8 +15,7 @@
     color: white;
 }
 
-.main-registration
-{
+.main-registration {
     padding: 5% 0%;
     width: 100%;
     height: 100%;
@@ -27,8 +25,7 @@
     justify-content: center;
 }
 
-.heading-registrataion
-{
+.heading-registrataion {
     width: 100%;
     height: 10vh;
     display: flex;
@@ -38,8 +35,7 @@
     font-size: 1.5rem;
 }
 
-.input-fields-main-div
-{
+.input-fields-main-div {
     width: 100%;
     height: 100%;
     display: flex;
@@ -48,8 +44,7 @@
     justify-content: center;
 }
 
-.form-group
-{
+.form-group {
     width: 35%;
     /* height: 10vh; */
     display: flex;
@@ -59,36 +54,60 @@
     margin: 1%;
 }
 
-.form-group label
-{
+.form-group label {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-size: 1.3rem;
     margin: 1% 0;
+    margin-bottom: 2%;
 }
 
-.form-group input
-{
+.form-group input {
     width: 100%;
-    height: 5vh;
+    height: 6vh;
     border-radius: 5px;
-    border: none;
-    padding: 0.5%;
     font-size: 1rem;
-    padding: 0 2%;
-    background: rgb(54, 54, 54);
+    padding: 1% 2%;
     color: white;
+    text-indent: 10px;
+    border-radius: 10px;
+    outline: none;
+    background: none;
+    transition: 0.3s;
+    border: 1px solid rgb(9, 245, 245);
+    z-index: 2;
 }
 
-.form-group select
-{
+
+.form-group input:focus {
+    box-shadow: 0 0 15px rgb(9, 245, 245), 0 0 75px rgb(9, 245, 245);
+}
+
+.form-group input::placeholder {
+    color: grey;
+}
+.form-group select {
     width: 100%;
-    height: 5vh;
+    height: 7vh;
     border-radius: 5px;
-    padding: 0.5%;
     font-size: 1rem;
-    background: rgb(54, 54, 54);
+    padding: 1% 2%;
     color: white;
+    border-radius: 10px;
+    outline: none;
+    background: none;
+    transition: 0.3s;
+    border: 1px solid rgb(9, 245, 245);
+    z-index: 2;
+}
+
+
+.form-group select:focus {
+    box-shadow: 0 0 15px rgb(9, 245, 245), 0 0 75px rgb(9, 245, 245);
+}
+
+.form-group select::placeholder {
+    color: grey;
 }
