--- a/src/pages/Registration/Registration.css
+++ b/src/pages/Registration/Registration.css
@@ -9,6 +9,7 @@
 }
 
 .section-registration {
+    position: relative;
     width: 100%;
     /* height: 100vh; */
     background-color: #000;
@@ -19,8 +20,7 @@
     color: white;
 }
 
-.video-bg
-{
+.video-bg {
     width: 100%;
     height: 100%;
 }
@@ -142,7 +142,7 @@
 
 .form-button button {
     width: 20%;
-    height: 6vh;
+    height: 8vh;
     border-radius: 5px;
     font-size: 1rem;
     padding: 1% 2%;
